--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,8 +8,7 @@ phases:
     - echo Logging in to Amazon ECR...
     - aws --version
     - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-    - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
-    - IMAGE_URI=${REPOSITORY_URI}:${TAG}
+    - IMAGE_URI=${REPOSITORY_URI}
   build:
     commands:
     - echo Build started on `date`
