--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,7 +8,8 @@ phases:
     - echo Logging in to Amazon ECR...
     - aws --version
     - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-    - IMAGE_URI=${REPOSITORY_URI}
+    - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
+    - IMAGE_URI=${REPOSITORY_URI}:${TAG}
   build:
     commands:
     - echo Build started on `date`
