--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,13 +9,13 @@ phases:
     - aws --version
     - aws ecr get-login-password --region $AWS_DEFAULT_REGION
     - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
-    - IMAGE_URI=${REPOSITORY_URI}
+    - IMAGE_URI=${REPOSITORY_URI}:{TAG}
   build:
     commands:
     - echo Build started on `date`
     - echo $IMAGE_URI
     - mvn clean package -Ddockerfile.skip
-    - docker build -t $REPOSITORY_URI .
+    - docker build -t $IMAGE_URI .
   post_build:
     commands:
     - printenv
