--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,7 +8,7 @@ phases:
     - echo Logging in to Amazon ECR...
     - aws --version
     - aws ecr get-login-password --region $AWS_DEFAULT_REGION
-    - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
+    - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)"
     - IMAGE_URI=${REPOSITORY_URI}:{TAG}
   build:
     commands:
