--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,7 +9,7 @@ phases:
     - aws --version
     - aws ecr get-login-password --region $AWS_DEFAULT_REGION
     - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)"
-    - IMAGE_URI=${REPOSITORY_URI}:{TAG}
+    - IMAGE_URI=${REPOSITORY_URI}:${TAG}
   build:
     commands:
     - echo Build started on `date`
