--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -22,7 +22,7 @@ phases:
     - echo Build completed on `date`
     - echo $(docker images)
     - echo Pushing docker image
-    - docker push $REPOSITORY_URI:$IMAGE_TAG
+    - docker push $REPOSITORY_URI
     - echo push completed
     - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $IMAGE_URI > imagedefinitions.json
 artifacts:
