buildspec file edited

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,27 +5,25 @@ phases:
       java: corretto17
   pre_build:
     commands:
-    - echo Logging in to Amazon ECR...
-    - aws --version
-    - aws ecr get-login-password --region $AWS_DEFAULT_REGION
-    - COMMIT_HASH="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)"
-    - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - echo Logging in to Amazon ECR...
+      - aws --version
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
-    - echo Build started on `date`
-    - echo $IMAGE_URI
-    - mvn clean package -Ddockerfile.skip
-    - docker build -t $REPOSITORY_URI .
+      - echo Build started on `date`
+      - echo Building the Docker image...
+      - docker build -t ${REPOSITORY_URI}:latest .
+      - docker tag ${REPOSITORY_URI}:latest ${REPOSITORY_URI}:$IMAGE_TAG
   post_build:
     commands:
-    - printenv
-    - echo Build completed on `date`
-    - echo $(docker images)
-    - echo Pushing docker image
-    - docker push $REPOSITORY_URI
-    - echo push completed
-    - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $IMAGE_URI > imagedefinitions.json
+      - echo Build completed on `date`
+      - echo Pushing the Docker images...
+      - docker push $REPOSITORY_URI:latest
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo Writing image definitions file...
+      - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $IMAGE_URI > imagedefinitions.json
 artifacts:
-  files:
-  - imagedefinitions.json
+    files: imagedefinitions.json
   
