--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -15,8 +15,8 @@ phases:
     - echo Build started on `date`
     - echo $IMAGE_URI
     - mvn clean package -Ddockerfile.skip
-    - docker build -t $IMAGE_URI .
-    - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+    - docker build -t $REPOSITORY_URI:latest .
+    - docker tag $REPOSITORY_URI:latest $IMAGE_TAG
   post_build:
     commands:
     - printenv
