--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,22 +8,21 @@ phases:
     - echo Logging in to Amazon ECR...
     - aws --version
     - aws ecr get-login-password --region $AWS_DEFAULT_REGION
-    - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)"
-    - IMAGE_URI=${REPOSITORY_URI}:${TAG}
+    - IMAGE_URI=${REPOSITORY_URI}
   build:
     commands:
     - echo Build started on `date`
     - echo $IMAGE_URI
     - mvn clean package -Ddockerfile.skip
-    - docker build -t $REPOSITORY_URI:latest .
-    - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$TAG
+    - docker build -t $IMAGE_URI .
+    - docker tag $REPOSITORY_URI $REPOSITORY_URI
   post_build:
     commands:
     - printenv
     - echo Build completed on `date`
     - echo $(docker images)
     - echo Pushing docker image
-    - docker push $REPOSITORY_URI:$TAG
+    - docker push $IMAGE_URI
     - echo push completed
     - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $IMAGE_URI > imagedefinitions.json
 artifacts:
