--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,7 +7,7 @@ phases:
     commands:
     - echo Logging in to Amazon ECR...
     - aws --version
-    - eval $(aws ecr get-login-password --region $AWS_DEFAULT_REGION --no-include-email | sed ‘s|https://||’)
+    - aws ecr get-login-password --region $AWS_DEFAULT_REGION --no-include-email
     - IMAGE_URI=${REPOSITORY_URI}
   build:
     commands:
