--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,7 +7,7 @@ phases:
     commands:
     - echo Logging in to Amazon ECR...
     - aws --version
-    - aws ecr get-login-password --region $AWS_DEFAULT_REGION --no-include-email
+    - aws ecr get-login-password --no-include-email --region $AWS_DEFAULT_REGION
     - IMAGE_URI=${REPOSITORY_URI}
   build:
     commands:
