--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,22 +7,24 @@ phases:
     commands:
     - echo Logging in to Amazon ECR...
     - aws --version
-    - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 860061945305.dkr.ecr.us-west-2.amazonaws.com
-    - IMAGE_URI=${REPOSITORY_URI}
+    - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 860061945305.dkr.ecr.us-west-2.amazonaws.com
+    - IMAGE_NAME=dh-first-demo-repo
+    - IMAGE_URI=860061945305.dkr.ecr.us-west-2.amazonaws.com/dh-first-demo-repo:latest
+    - CONTAINER_NAME = dh-first-demo-repo
   build:
     commands:
     - echo Build started on `date`
-    - echo $IMAGE_URI
+    - echo $IMAGE_NAME
     - mvn clean package -Ddockerfile.skip
-    - docker build -t $IMAGE_URI .
-    - docker tag $IMAGE_URI $REPOSITORY_URI
+    - docker build -t $IMAGE_NAME .
   post_build:
     commands:
     - printenv
     - echo Build completed on `date`
     - echo $(docker images)
+    - docker tag $IMAGE_NAME $IMAGE_URI
     - echo Pushing docker image
-    - docker push $REPOSITORY_URI
+    - docker push $IMAGE_URI
     - echo push completed
     - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $IMAGE_URI > imagedefinitions.json
 artifacts:
