--- a/appspec.yaml
+++ b/appspec.yaml
@@ -3,8 +3,8 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "arn:aws:ecs:us-west-2:860061945305:task-definition/dh-first-demo:1"
+        TaskDefinition: "arn:aws:ecs:us-west-2:860061945305:task-definition/docker-demo:1"
         LoadBalancerInfo:
-          ContainerName: "first-demo"
-          ContainerPort: "80"
+          ContainerName: "dh-first-demo-repo"
+          ContainerPort: "8200"
         PlatformVersion: "LATEST"
