--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,8 +8,8 @@ phases:
     - echo Logging in to Amazon ECR...
     - aws --version
     - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 860061945305.dkr.ecr.us-west-2.amazonaws.com
-    - IMAGE_NAME=dh-first-demo-repo
-    - IMAGE_URI=860061945305.dkr.ecr.us-west-2.amazonaws.com/dh-first-demo-repo:latest
+    - IMAGE_NAME=docker-demo
+    - IMAGE_URI=860061945305.dkr.ecr.us-west-2.amazonaws.com/docker-demo:latest
     - CONTAINER_NAME=$IMAGE_NAME
   build:
     commands:
